src/objects/BI_Data__c.object
<CustomObject>
    <description>To hold store information from BI.</description>
    <fields>
        <fullName>Account_Mismatch__c</fullName>
        <formula>IF(  Opportunity__r.AccountId  &lt;&gt;  Account__c   , true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BI Data</relationshipLabel>
        <relationshipName>BI_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmberPOS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Amber POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avalara__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Avalara</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_GMV__c</fullName>
        <inlineHelpText>Total Lifetime GMV/number of months since provisioned or Jan 1 2013.</inlineHelpText>
        <label>Average Monthly GMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BI_Date_Paid__c</fullName>
        <inlineHelpText>Date last payment was invoiced - this information is added from our data warehourse</inlineHelpText>
        <label>Last Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BI_Invoice_Status__c</fullName>
        <inlineHelpText>What is the status of the invoice?  Data comes from BI.</inlineHelpText>
        <label>BI Invoice Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refunded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BI_Payment_Amount__c</fullName>
        <inlineHelpText>How much money we received from the client -  this information is added from our data warehourse</inlineHelpText>
        <label>BI Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BlueprintTemplate__c</fullName>
        <label>Blueprint Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_GMV__c</fullName>
        <label>Average Daily GMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Orders__c</fullName>
        <label>Average Daily Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_Status__c</fullName>
        <description>Domain Status</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DydaComp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Dyda Comp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIGHomestead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>EIG Homestead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Endicia__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Endicia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>First Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Global Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heartland__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Heartland</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intuit_QBMS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Intuit QBMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intuit_QBO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Intuit QBO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jirafe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Jirafe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_12_months_GMV__c</fullName>
        <label>Last 12 month&apos;s GMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_12_months_Orders__c</fullName>
        <label>Last 12 month&apos;s Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <description>Month of last activity</description>
        <inlineHelpText>Month when last activity was recorded</inlineHelpText>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Month_GMV__c</fullName>
        <formula>IF(MONTH(  Most_Recent_Order_Date__c ) = MONTH(Today()) -1,  Previous_months_GMV__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Last month&apos;s GMV.</inlineHelpText>
        <label>Last Month GMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Amount__c</fullName>
        <label>Last Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Partner_Name__c</fullName>
        <label>Latest Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Theme_Purchased__c</fullName>
        <label>Latest Theme Purchased</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_GMV__c</fullName>
        <inlineHelpText>Lifetime GMV since 1/1/13 or Store provision date if provisioned after.</inlineHelpText>
        <label>Lifetime GMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lifetime_Orders__c</fullName>
        <label>Lifetime Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MBA_Account_ID__c</fullName>
        <label>MBA Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBA_Subscription_ID__c</fullName>
        <externalId>true</externalId>
        <label>MBA Subscription ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterCard_Simplify__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Mastercard Simplify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchant_Warehouse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Merchant Warehouse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_To_Date_Orders__c</fullName>
        <label>Month To Date Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_to_date_GMV__c</fullName>
        <inlineHelpText>For active clients it is the current month GMV. For former clients it is the last month to date GMV.</inlineHelpText>
        <label>Month To Date GMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Order_Date__c</fullName>
        <label>Most Recent Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Verifiable_GMV__c</fullName>
        <description>What the heck does verifiable mean? https://goo.gl/ouc0pn</description>
        <inlineHelpText>What the heck does verifiable mean? https://goo.gl/ouc0pn</inlineHelpText>
        <label>Non-Verifiable GMV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BI Data</relationshipLabel>
        <relationshipName>BI_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <formula>Opportunity__r.rvpe__RVAccount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Indicates 1 for Monthly and 12 for Annual</description>
        <label>Payment Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paypal_Braintree__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Paypal Braintree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Month_GMV_Date__c</fullName>
        <description>Date corresponding to the Previous month GMV.</description>
        <inlineHelpText>This is the date for which the previous month GMV was obtained.</inlineHelpText>
        <label>Previous Month GMV Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_month_Orders__c</fullName>
        <label>Previous month&apos;s Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_months_GMV__c</fullName>
        <inlineHelpText>GMV corresponding to previous month of activity (not necessarily calendar last month).</inlineHelpText>
        <label>Previous month&apos;s GMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Eligible_GMV__c</fullName>
        <description>Requested per BAP-3408.</description>
        <label>Pricing Eligible GMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Eligible_Orders__c</fullName>
        <description>Requested per BAP-3408.</description>
        <label>Pricing Eligible Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revshare_Partner_Name__c</fullName>
        <label>Revshare Partner Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revshare_partner_Type__c</fullName>
        <label>Revshare partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>payment gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>email marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>service partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>apps - shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>apps - taxes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Test__c</fullName>
        <formula>OR(   

AND(ISPICKVAL( BI_Invoice_Status__c, &quot;unpaid&quot;),  CONTAINS( Subscription__c, &quot;bigcommerce enterprise&quot;)   
)
,

AND(ISPICKVAL( BI_Invoice_Status__c, &quot;Cancelled&quot;),  CONTAINS(Subscription__c, &quot;bigcommerce enterprise&quot;)
)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SKUVault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>SKU Vault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_1000__c</fullName>
        <description>BAP-2931: Dialer Test</description>
        <label>Sample_1000</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_100__c</fullName>
        <defaultValue>0</defaultValue>
        <description>BAP-2931: Dialer Test</description>
        <label>Sample_100</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_10__c</fullName>
        <description>BAP-2931: Dialer Test</description>
        <label>Sample_10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SellerExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Seller Express</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StencilThemeVariationName__c</fullName>
        <label>Stencil Theme Variation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StencilThemeVersionName__c</fullName>
        <label>Stencil Theme Version Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Used__c</fullName>
        <description>Monthly Storage Used</description>
        <inlineHelpText>Monthly Storage Used</inlineHelpText>
        <label>Storage Used (Mb)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stripe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Stripe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>BI Data</relationshipLabel>
        <relationshipName>BI_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Subuno__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Subuno</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ThemeFramework__c</fullName>
        <label>Theme Framework</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <label>Theme</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Spent_on_Themes__c</fullName>
        <label>Total Spent on Themes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Themes_Purchased__c</fullName>
        <label>Total Themes Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verifiable_GMV__c</fullName>
        <description>What the heck does verifiable mean? https://goo.gl/ouc0pn</description>
        <inlineHelpText>What the heck does verifiable mean? https://goo.gl/ouc0pn</inlineHelpText>
        <label>Verifiable GMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wiser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Wiser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2Checkout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>2Checkout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zing_Checkout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the store using this SBD Partner?</description>
        <inlineHelpText>Is the store using this SBD Partner?</inlineHelpText>
        <label>Zing Checkout</label>
        <type>Checkbox</type>
    </fields>
    <label>BI Data</label>
    <listViews>
        <fullName>Account_mismatch</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>MBA_Account_ID__c</columns>
        <columns>MBA_Subscription_ID__c</columns>
        <columns>Domain_Status__c</columns>
        <columns>Subscription__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Partner_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Mismatch__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Account mismatch</label>
    </listViews>
    <listViews>
        <fullName>No_Opp</fullName>
        <columns>NAME</columns>
        <columns>Subscription__c</columns>
        <columns>Domain_Status__c</columns>
        <columns>Daily_GMV__c</columns>
        <columns>MBA_Subscription_ID__c</columns>
        <columns>MBA_Account_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Domain_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>No Opp</label>
    </listViews>
    <listViews>
        <fullName>Orders_Data</fullName>
        <columns>NAME</columns>
        <columns>Daily_Orders__c</columns>
        <columns>Last_12_months_Orders__c</columns>
        <columns>Lifetime_Orders__c</columns>
        <columns>Month_To_Date_Orders__c</columns>
        <columns>Subscription__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Orders Data</label>
    </listViews>
    <listViews>
        <fullName>Store_Payment_Status</fullName>
        <columns>NAME</columns>
        <columns>Subscription__c</columns>
        <columns>BI_Date_Paid__c</columns>
        <columns>BI_Invoice_Status__c</columns>
        <columns>BI_Payment_Amount__c</columns>
        <columns>MBA_Account_ID__c</columns>
        <columns>MBA_Subscription_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Store Payment Status</label>
    </listViews>
    <nameField>
        <displayFormat>BI-{000000}</displayFormat>
        <label>BI Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BI Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>